--- a/src/spa/.eslintrc.json
+++ b/src/spa/.eslintrc.json
@@ -16,7 +16,9 @@
       },
       "extends": [
         "plugin:@angular-eslint/recommended",
-        "plugin:@angular-eslint/template/process-inline-templates"
+        "plugin:@angular-eslint/template/process-inline-templates",
+        "plugin:storybook/recommended",
+        "prettier"
       ],
       "rules": {
         "@angular-eslint/directive-selector": [
