--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,12 @@
 {
   "recommendations": [
+    "Angular.ng-template",
+    "dbaeumer.vscode-eslint",
+    "esbenp.prettier-vscode",
+    "EditorConfig.EditorConfig",
     "ms-azuretools.vscode-azurefunctions",
-    "ms-dotnettools.csharp"
+    "ms-azuretools.vscode-azurestaticwebapps",
+    "ms-dotnettools.csharp",
+    "streetsidesoftware.code-spell-checker",
   ]
 }
