--- a/src/spa/.vscode/extensions.json
+++ b/src/spa/.vscode/extensions.json
@@ -3,7 +3,7 @@
   "recommendations": [
     "angular.ng-template",
     "dbaeumer.vscode-eslint",
-    "esbenp.prettier-vscode",
-    "EditorConfig.EditorConfig"
+    "EditorConfig.EditorConfig",
+    "esbenp.prettier-vscode"
   ]
 }
