--- a/src/spa/package.json
+++ b/src/spa/package.json
@@ -39,6 +39,7 @@
     "@angular/compiler-cli": "~13.3.0",
     "@babel/core": "^7.17.10",
     "@compodoc/compodoc": "^1.1.19",
+    "@ngneat/aim": "^2.0.0",
     "@storybook/addon-actions": "^6.4.22",
     "@storybook/addon-essentials": "^6.4.22",
     "@storybook/addon-interactions": "^6.4.22",
