--- a/src/spa/.eslintrc.json
+++ b/src/spa/.eslintrc.json
@@ -25,7 +25,7 @@
           "error",
           {
             "type": "attribute",
-            "prefix": "app",
+            "prefix": "db",
             "style": "camelCase"
           }
         ],
@@ -33,8 +33,18 @@
           "error",
           {
             "type": "element",
-            "prefix": "app",
+            "prefix": "db",
             "style": "kebab-case"
+          }
+        ],
+        "@angular-eslint/component-class-suffix": [
+          "error",
+          {
+            "suffixes": [
+              "Component",
+              "Container",
+              "Page"
+            ]
           }
         ]
       }
