--- a/src/spa/.vscode/launch.json
+++ b/src/spa/.vscode/launch.json
@@ -15,6 +15,13 @@
       "request": "launch",
       "preLaunchTask": "npm: test",
       "url": "http://localhost:9876/debug.html"
+    },
+    {
+      "name": "Storybook",
+      "type": "chrome",
+      "request": "launch",
+      "preLaunchTask": "npm: storybook",
+      "url": "http://localhost:6001"
     }
   ]
 }
