--- a/src/spa/package.json
+++ b/src/spa/package.json
@@ -11,6 +11,7 @@
     "lint": "ng lint",
     "docs:json": "compodoc -p ./tsconfig.json -e json -d .",
     "storybook": "npm run docs:json && start-storybook -p 6006",
+    "build:storybook": "npm run build-storybook",
     "build-storybook": "npm run docs:json && build-storybook"
   },
   "private": true,
@@ -44,7 +45,7 @@
     "@storybook/addon-essentials": "^6.4.22",
     "@storybook/addon-interactions": "^6.4.22",
     "@storybook/addon-links": "^6.4.22",
-    "@storybook/angular": "^6.4.22",
+    "@storybook/angular": "^6.1.21",
     "@storybook/builder-webpack5": "^6.4.22",
     "@storybook/manager-webpack5": "^6.4.22",
     "@storybook/testing-library": "^0.0.11",
